Fix overflow bug

--- a/app/assets/stylesheets/channel_chat.scss
+++ b/app/assets/stylesheets/channel_chat.scss
@@ -94,7 +94,7 @@
 }
 
 #chat-box-welcome {
-  height: 100px;
+  // height: 100px;
   margin: 15px 0px;
   overflow: auto;
 }
